# voxel

./: .gitignore  CMakeLists.txt  Makefile  arrange-terrain.py  benchmark.cpp  compile_commands.json  compile_flags.txt  config.h  dfragment.glsl  editor.cpp  fragment.glsl  generate_world.py  gfragment.glsl  gvertex.glsl  lfragment.glsl  log.h  meson.build  notes  opengl_util.h  ray.h  redstone.cpp  redstone_config.h  redstone_tick.h  renderdoc.cap  repl.h  sfragment.glsl  stb_include.cpp  svertex.glsl  taa.glsl  test.cpp  todo  util.h  vertex.glsl  voxel.cpp  world.cpp  world.h
benchmark_worlds/: stress_128.world  stress_128_2.world
data/: bench_output.csv  bump_allocator.csv  coherent.diff  expression_height_histograms.xls
data/output/: stress_256-1  stress_256-2  stress_256-4  stress_256-8  stress_256_no_delays-1  stress_256_no_delays-2  stress_256_no_delays-4  stress_256_no_delays-8  (+10 more)
glsl/: block_map.glsl  face_orientation_to_block_id.glsl  gfragment.glsl  ggeometry.glsl  gvertex.glsl  lfragment-impl.glsl  lfragment-prologue.glsl  lfragment.glsl  predicated_raycast.glsl  raycast-bitvector.glsl  raycast-mipmapped.glsl  raycast-naive.glsl  raycast-predicated.glsl  raycast.glsl  redstone_tick.glsl  sfragment.glsl  taa.glsl  util.glsl
redstone-data/: stress_256-2  stress_256-4  stress_256_no_delays-2  stress_256_no_delays-4  stress_256_no_delays-8  stress_256_no_delays_transposed-2  stress_256_no_delays_transposed-4  stress_256_no_delays_transposed-8  stress_256_transposed-1  stress_256_transposed-4
scripts/: bench_graphics.py  compile_benchmarks.sh  generate_world.py  make_benchmark.sh  run_benchmarks.sh  world_edit.py
stress_tests/: stress_64.cpp  stress_64.world
tests/: and_gate.cpp  basic_delay_gate.cpp  basic_not_gate.cpp  basic_redstone_propagation.cpp  blinker.cpp  blocks.cpp  bluestone.cpp  chained_delay_gate.cpp  chained_not_gate.cpp  diode.cpp  display.cpp  greenstone.cpp  loops.cpp  loops_bluestone.cpp  loops_greenstone.cpp  order_of_not_gates.cpp  switch.cpp  test_helpers.h
textures/: arrange-terrain.py
worlds/: bug1  circuits  full_adder  game_of_life_128  game_of_life_128_acorn  game_of_life_128_powered  game_of_life_cell  stopwatch
(+26 files in other folders)
